[project]
name = "graphviz"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Simple Python interface for Graphviz"
keywords = ["graph", "visualization", "dot", "render"]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/xflr6/graphviz"
Documentation = "https://graphviz.readthedocs.io"
Changelog = "https://graphviz.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/xflr6/graphviz/issues"
CI = "https://github.com/xflr6/graphviz/actions"
Coverage = "https://codecov.io/gh/xflr6/graphviz"

[project.optional-dependencies]
dev = ["build", "wheel", "twine", "flake8", "Flake8-pyproject", "pep8-naming", "tox>=3"]
test = [
  "pytest>=7,<8.1",  # https://github.com/pytest-dev/pytest/issues/12123
  "pytest-mock>=3",
  "pytest-cov", "coverage",
]
docs = ["sphinx>=5,<7", "sphinx-autodoc-typehints", "sphinx-rtd-theme>=0.2.5"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = { attr = "graphviz.__version__" }

[tool.pytype]
inputs = ["graphviz"]

[tool.flake8]
exclude = ["docs", "build", ".tox"]
ignore = ["E126", "E128", "W503"]
max-line-length = 100

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["README.rst", "docs", "graphviz", "tests"]
addopts = [
  "--doctest-modules",
  "--doctest-glob='*.rst'", "--ignore=docs/conf.py",
  "--doctest-continue-on-failure",
  # pytest summary: all except (E)rror
  # - (f)ailed
  # - (s)kipped
  # - (x/X)failed/passed
  # - (p/P)assed (no output)
  "-r fsxX",
  "--durations=10",
  "--cov", "--cov-report=term", "--cov-report=html",
  "--strict-config", "--strict-markers",
]
log_cli = true
log_cli_level = "WARNING"
log_file = "test-log.txt"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["graphviz"]
branch = false
omit = ["*/conftest.py"]

[tool.tox]
legacy_tox_ini = """
  [tox]
  envlist = py{313,312,311,310,39}
  skip_missing_interpreters = true

  [testenv]
  extras = test
  commands = python -X dev run-tests.py {posargs}
"""
