[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[tool:pytest]
minversion = 5.2
testpaths = README.rst docs graphviz tests
addopts =
  --doctest-modules
  --doctest-glob='*.rst' --ignore=docs/conf.py
  --cov --cov-report=term --cov-report=html
  --strict-markers
mock_use_standalone_module = true
log_cli = false
log_cli_level = DEBUG
log_file = test-log.txt
log_file_level = DEBUG

[coverage:run]
source = graphviz
branch = false

[flake8]
ignore = E126,E128
max-line-length = 100
exclude = docs, .tox
