[metadata]
license_files = LICENSE.txt

[sdist]
formats = zip

[tool:pytest]
minversion = 6
testpaths =
  README.rst
  docs
  graphviz
  tests
addopts =
  --doctest-modules
  --doctest-glob='*.rst' --ignore=docs/conf.py
  --doctest-continue-on-failure
  # pytest summary: all except (E)rror
  # - (f)ailed
  # - (s)kipped
  # - (x/X)failed/passed
  # - (p/P)assed (no output)
  -r fsxX
  --durations=10
  --cov --cov-report=term --cov-report=html
  --strict-config --strict-markers
log_cli = true
log_cli_level = WARNING
log_file = test-log.txt
log_file_level = DEBUG

[coverage:run]
source = graphviz
branch = false
omit = */conftest.py

[pytype]
inputs = graphviz

[flake8]
ignore = E126,E128,W503
max-line-length = 100
exclude = docs, build, .tox
